--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ plugins {
 group 'pl.lodz.zzpj'
 version '1.0-SNAPSHOT'
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 repositories {
     mavenCentral()
 }
